--- a/src/global.scss
+++ b/src/global.scss
@@ -62,12 +62,11 @@
 }
 
 body {
-	display: grid;
 	height: 100vh;
 	overflow: hidden;
 }
 
-main {
+nav > div {
 	width: 100%;
-	overflow: auto;
+	height: 100%;
 }
